// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftViewStationSelect > renders correctly 1`] = `
<header-block-button-stub
  large="false"
  title="Test station"
  titleclass="title"
/>
`;

exports[`ShiftViewStationSelect > renders correctly when large is true 1`] = `
<header-block-button-stub
  large="true"
  title="Test station"
  titleclass="title"
/>
`;
